Refactor and cleanup